# autodiff-rs

./: Cargo.toml
src/: README.md  constant_value.rs  float.rs  lib.rs  symbol.rs  value.rs
src/dual/: mod.rs
src/dual/functions/: abs.rs  cos.rs  exp.rs  log.rs  mod.rs  pow.rs  sin.rs
src/dual/operators/: add.rs  div.rs  mul.rs  neg.rs  sub.rs
src/expression/: assign.rs  differential.rs  evaluate.rs  indexed_tensor.rs  mod.rs  partial_variable.rs  rust_code.rs  size.rs  symbol.rs  tex_code.rs  value.rs  variable.rs
src/expression/functions/: abs.rs  cos.rs  exp.rs  ln.rs  log.rs  mod.rs  pow.rs  sin.rs  tan.rs
src/expression/matrix_expression/: as_scalar.rs  assign.rs  differential.rs  evaluate.rs  mod.rs  rust_code.rs  size.rs  symbol.rs  tex_code.rs  value.rs  variable.rs
src/expression/matrix_expression/operations/: det.rs  exp.rs  inv.rs  mod.rs  pow.rs  solve.rs  t.rs  tr.rs
src/expression/matrix_expression/operators/: add.rs  mod.rs  mul.rs  neg.rs  sub.rs
src/expression/operators/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  pow.rs  sub.rs
src/expression/tensor_expression/: assign.rs  differential.rs  evaluate.rs  mod.rs  rust_code.rs  size.rs  symbol.rs  tex_code.rs  variable.rs
src/expression/tensor_expression/matrix_expression/: assign.rs  differential.rs  mod.rs  (+4 more)
src/expression/transcendental_expression/: assign.rs  differential.rs  evaluate.rs  into.rs  mod.rs  rust_code.rs  size.rs  symbol.rs  tex_code.rs  variable.rs
src/expression_array/: index.rs  mod.rs
tests/: tensor_test.rs
tests/probability/: continuous_distribution.rs  gaussian_process.rs  joint_array_distribution.rs  joint_distribution.rs  kernel.rs  mod.rs  multivatiate_normal.rs  rbf.rs  svgd.rs
(+23 files in other folders)
