[package]
name = "opensrdk-symbolic-computation"
version = "0.1.5"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"
description = "Standard automatic differential library for OpenSRDK toolchain."
repository = "https://github.com/OpenSRDK/symbolic-computation-rs"
license = "Apache-2.0"
keywords = ["differential", "tensor"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.28"
rayon = "1.5.1"
opensrdk-linear-algebra = "0.9.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
blas-src = { version = "0.8", features = ["intel-mkl"] } 
lapack-src = { version = "0.8", features = ["intel-mkl"] }
plotters = "0.3.1"
ron = "0.8"
